--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,7 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+assets/images/test_banner_4.jpg
+assets/images/test_banner_5.jpg
+assets/images/test_banner_6.jpg
+assets/media/
